--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">UOL Challenge</string>
     <string name="error_not_found">Não há conteúdo disponível no momento para esse canal</string>
+    <string name="error_not_found_detail">Ops ...\nParece que essa notícia não existe mais ...</string>
     <string name="error_server_down">Há um problema com nossos servidores</string>
     <string name="error_internet_connection">Houve um erro de comunicação</string>
     <string name="snacktext_internet_connection">Verifique sua conexão com a internet</string>
